[gd_scene load_steps=9 format=3 uid="uid://cbqm10oqxjvfy"]

[ext_resource type="Script" path="res://scripts/level_0.gd" id="1_da01g"]
[ext_resource type="PackedScene" uid="uid://bkpuw7t2myv2b" path="res://scenes/tile_map.tscn" id="2_3ynk5"]
[ext_resource type="PackedScene" uid="uid://inoxctkfevti" path="res://scenes/start_character.tscn" id="3_xvbap"]
[ext_resource type="FontFile" uid="uid://dapdd7bt7gjcl" path="res://fonts/Symtext.ttf" id="4_l8p61"]
[ext_resource type="Texture2D" uid="uid://54wvnbdyveqk" path="res://buttons text pack/playuse.png" id="5_l4we8"]
[ext_resource type="Texture2D" uid="uid://c6ebiqtaue17h" path="res://buttons text pack/about (1).png" id="6_mdpsp"]
[ext_resource type="AudioStream" uid="uid://cwe21ndh230ai" path="res://sounds/Start Scene Music.mp3" id="7_4h0t3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_603yb"]
size = Vector2(119, 167)

[node name="Start Scene" type="Node2D"]
script = ExtResource("1_da01g")

[node name="TileMap" parent="." instance=ExtResource("2_3ynk5")]
layer_0/tile_data = PackedInt32Array(196608, 131072, 1, 262144, 131072, 1, 327680, 131072, 1, 393216, 131072, 1, 458752, 131072, 2, 458753, 131072, 2, 458754, 131072, 2, 458755, 131072, 2, 458756, 131072, 2, 458757, 131072, 2, 458758, 131072, 2, 458759, 131072, 2, 458760, 131072, 2, 458761, 131072, 2, 458762, 131072, 2, 458763, 131072, 2, 458764, 131072, 2, 458765, 131072, 2, 458766, 131072, 2, 458767, 131072, 2, 458768, 131072, 2, 458769, 131072, 2, 458770, 131072, 2, 393234, 131072, 1, 327698, 131072, 1, 262163, 131072, 1, 196627, 131072, 1, 196626, 131072, 1, 131090, 131072, 0, 262162, 131072, 1, 65554, 1, 0, 65553, 1, 0, 65552, 1, 0, 65551, 1, 0, 65550, 1, 0, 65549, 1, 0, 65548, 1, 0, 65547, 1, 0, 65546, 1, 0, 65545, 1, 0, 65544, 1, 0, 65543, 1, 0, 6, 1, 0, 5, 1, 0, 4, 1, 0, 3, 1, 0, 2, 1, 0, 1, 1, 0, 65537, 1, 0, 65536, 1, 0, 131072, 131072, 0, 131073, 131072, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 131080, 131072, 0, 131081, 131072, 0, 131082, 131072, 0, 131083, 131072, 0, 131084, 131072, 0, 131085, 131072, 0, 131086, 131072, 0, 131087, 131072, 0, 131088, 131072, 0, 131089, 131072, 0, 196625, 131072, 1, 196624, 131072, 1, 196623, 131072, 1, 196622, 131072, 1, 196621, 131072, 1, 196620, 131072, 1, 196619, 131072, 1, 196618, 131072, 1, 196617, 131072, 1, 196616, 131072, 1, 196615, 131072, 1, 131078, 131072, 0, 131077, 131072, 0, 131076, 131072, 0, 131075, 131072, 0, 131074, 131072, 0, 131079, 131072, 0, 327690, 131072, 1, 262154, 131072, 1, 262153, 131072, 1, 262152, 131072, 1, 262151, 131072, 1, 262150, 131072, 1, 196614, 131072, 1, 196613, 131072, 1, 196612, 131072, 1, 196611, 131072, 1, 196610, 131072, 1, 196609, 131072, 1, 262145, 131072, 1, 327681, 131072, 1, 393217, 131072, 1, 393218, 131072, 1, 327682, 131072, 1, 262146, 131072, 1, 262147, 131072, 1, 327683, 131072, 1, 393219, 131072, 1, 393220, 131072, 1, 327684, 131072, 1, 262148, 131072, 1, 262149, 131072, 1, 327685, 131072, 1, 393221, 131072, 1, 393222, 131072, 1, 327686, 131072, 1, 327687, 131072, 1, 393223, 131072, 1, 393224, 131072, 1, 327688, 131072, 1, 327689, 131072, 1, 393225, 131072, 1, 393226, 131072, 1, 393227, 131072, 1, 327691, 131072, 1, 262155, 131072, 1, 262156, 131072, 1, 327692, 131072, 1, 393228, 131072, 1, 393229, 131072, 1, 327693, 131072, 1, 262157, 131072, 1, 262158, 131072, 1, 327694, 131072, 1, 393230, 131072, 1, 393231, 131072, 1, 327695, 131072, 1, 262159, 131072, 1, 262160, 131072, 1, 327696, 131072, 1, 393232, 131072, 1, 393233, 131072, 1, 327697, 131072, 1, 262161, 131072, 1, 327699, 131072, 1, 393235, 131072, 1, 458771, 131072, 2, 458772, 131072, 2, 393236, 131072, 1, 327700, 131072, 1, 262164, 131072, 1, 196628, 131072, 1, 131092, 131072, 0, 65556, 1, 0, 65555, 1, 0, 131091, 131072, 0, 524308, 1, 0, 524307, 1, 0, 524306, 1, 0, 524305, 1, 0, 524304, 1, 0, 524303, 1, 0, 524302, 1, 0, 524301, 1, 0, 524300, 1, 0, 524299, 1, 0, 524298, 1, 0, 524297, 1, 0, 524296, 1, 0, 524295, 1, 0, 524294, 1, 0, 524293, 1, 0, 524292, 1, 0, 524291, 1, 0, 524290, 1, 0, 524289, 1, 0, 524288, 1, 0, 589823, 1, 0, 589822, 1, 0, 589821, 1, 0, 524285, 131072, 2, 458749, 131072, 1, 393213, 131072, 1, 327677, 131072, 1, 262141, 131072, 1, 196605, 131072, 0, 131069, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 131071, 1, 0, 196607, 131072, 0, 196606, 131072, 0, 262142, 131072, 1, 327678, 131072, 1, 393214, 131072, 1, 458750, 131072, 1, 524286, 131072, 2, 458751, 131072, 1, 393215, 131072, 1, 327679, 131072, 1, 262143, 131072, 1, 131070, 1, 0, 524287, 131072, 2, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 65532, 1, 0, 131068, 1, 0, 196604, 131072, 0, 262139, 131072, 1, 327675, 131072, 1, 393211, 131072, 1, 458747, 131072, 1, 524283, 131072, 2, 524284, 131072, 2, 589820, 1, 0, 589819, 1, 0, 458748, 131072, 1, 393212, 131072, 1, 327676, 131072, 1, 262140, 131072, 1, 196603, 131072, 0, 131067, 1, 0, 65531, 1, 0, 589844, 1, 0, 655380, 1, 0, 720916, 1, 0, 720915, 1, 0, 720914, 1, 0, 720913, 1, 0, 720912, 1, 0, 720911, 1, 0, 720910, 1, 0, 720909, 1, 0, 720908, 1, 0, 720907, 1, 0, 720906, 1, 0, 720905, 1, 0, 720904, 1, 0, 720903, 1, 0, 720902, 1, 0, 720901, 1, 0, 720900, 1, 0, 720899, 1, 0, 720898, 1, 0, 720897, 1, 0, 720896, 1, 0, 786431, 1, 0, 786430, 1, 0, 786429, 1, 0, 786428, 1, 0, 786427, 1, 0, 720891, 1, 0, 655355, 1, 0, 589843, 1, 0, 655379, 1, 0, 655378, 1, 0, 589842, 1, 0, 589841, 1, 0, 589840, 1, 0, 589839, 1, 0, 589838, 1, 0, 589837, 1, 0, 589836, 1, 0, 589835, 1, 0, 589834, 1, 0, 589833, 1, 0, 589832, 1, 0, 589831, 1, 0, 589830, 1, 0, 589829, 1, 0, 589828, 1, 0, 589827, 1, 0, 589826, 1, 0, 589825, 1, 0, 589824, 1, 0, 655359, 1, 0, 655358, 1, 0, 655357, 1, 0, 655356, 1, 0, 720892, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 720893, 1, 0, -5, 1, 0, -65541, 1, 0, -65540, 1, 0, -4, 1, 0, -3, 1, 0, -2, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -65517, 1, 0, -65516, 1, 0, -131052, 1, 0, -65518, 1, 0, -65519, 1, 0, -65520, 1, 0, -65521, 1, 0, -65522, 1, 0, -65523, 1, 0, -65524, 1, 0, -65525, 1, 0, -65526, 1, 0, -65527, 1, 0, -65528, 1, 0, -65529, 1, 0, -65530, 1, 0, -65531, 1, 0, -65532, 1, 0, -65533, 1, 0, -65534, 1, 0, -65535, 1, 0, -65536, 1, 0, -1, 1, 0, -65539, 1, 0)
layer_2/tile_data = PackedInt32Array(589820, 2, 5, 524295, 2, 5, 524307, 2, 5, 19, 2, 5, 7, 2, 5, 65532, 2, 5, 2, 2, 5, 13, 2, 5, 524290, 2, 5, 524301, 2, 5, 524298, 655362, 7, 589823, 393218, 7, 524304, 393218, 7, 65552, 393218, 7, 65546, 393218, 7, 131071, 393218, 7, 4, 655362, 7, 5, 524290, 6, 589829, 524290, 6, 589828, 524290, 6, -65525, 524290, 6, 589833, 2, 1, 589835, 2, 1, 655360, 2, 1, 589824, 2, 1, 16, 2, 1, 0, 2, 1)

[node name="Player" parent="." instance=ExtResource("3_xvbap")]
position = Vector2(-32, 76)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(126, 77)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(398, 80)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_603yb")

[node name="Title" type="Label" parent="."]
z_index = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 51.0
offset_top = -4.0
offset_right = 192.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.172549, 0.0392157, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_l8p61")
text = "Travel Quest"

[node name="Play" type="Button" parent="."]
z_index = 3
offset_left = 67.0
offset_top = 101.0
offset_right = 175.0
offset_bottom = 146.0
icon = ExtResource("5_l4we8")
flat = true

[node name="Credits" type="Button" parent="."]
z_index = 3
offset_left = 91.0
offset_top = 136.0
offset_right = 149.0
offset_bottom = 163.0
icon = ExtResource("6_mdpsp")
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4h0t3")
autoplay = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="button_down" from="Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="Credits" to="." method="_on_credits_button_down"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
